--- a/src/asciidoc/index.adoc
+++ b/src/asciidoc/index.adoc
@@ -1,5 +1,12 @@
 ifndef::snippets[]
 :snippets: ../../target/generated-snippets
 endif::[]
+:doctype: book
+:icons: font
+:source-highlighter: highlightjs
+:toc: left
+:toclevels: 4
+:sectlinks:
 
+= Admin Api
 include::{docdir}/coupon.adoc[]
