docs: 쿠폰 rest docs 작성

--- a/src/asciidoc/index.adoc
+++ b/src/asciidoc/index.adoc
@@ -29,3 +29,9 @@ include::{docdir}/member_couponzone.adoc[]
 
 == Order Usage
 include::{docdir}/member_order_usage.adoc[]
+
+== Member Page
+include::{docdir}/member_page_usage.adoc[]
+
+== Member Join
+include::{docdir}/member_join.adoc[]
