--- a/src/asciidoc/member_order_usage.adoc
+++ b/src/asciidoc/member_order_usage.adoc
@@ -4,7 +4,6 @@
 :adoc: {coupons}/testRefundCoupons
 ==== Request
 include::{adoc}/http-request.adoc[]
-include::{adoc}/request-body.adoc[]
 include::{adoc}/request-fields.adoc[]
 ==== Response
 include::{adoc}/http-response.adoc[]
@@ -12,10 +11,29 @@ include::{adoc}/http-response.adoc[]
 
 === 쿠폰 코드로 쿠폰 조회
 :adoc: {coupons}/testRetrieveCouponByCouponCode
+==== Request
+include::{adoc}/http-request.adoc[]
+include::{adoc}/request-parameters.adoc[]
+==== Response
+include::{adoc}/response-body.adoc[]
 
 
 === 쿠폰 코드 리스트로 쿠폰 조회
 :adoc: {coupons}/testRetrieveCouponByCouponCodeList
+==== Request
+include::{adoc}/http-request.adoc[]
+include::{adoc}/request-parameters.adoc[]
+[]
+==== Response
+include::{adoc}/response-body.adoc[]
+include::{adoc}/response-fields.adoc[]
+
 
 === 쿠폰 사용
 :adoc: {coupons}/testUseCoupons
+==== Request
+include::{adoc}/http-request.adoc[]
+include::{adoc}/request-body.adoc[]
+include::{adoc}/request-fields.adoc[]
+==== Response
+include::{adoc}/http-response.adoc[]
